--- a/app/views/events/_logged_in.html.erb
+++ b/app/views/events/_logged_in.html.erb
@@ -21,33 +21,69 @@
   </ul>
 </nav>
 
+<div class="m-3 card">
+  <div class="card-header fw-bold p-2">
+    お知らせ
+  </div>
+  <div class="card-body p-1 fs-6">
+    応募やお問い合わせは武田のLINE（@dreamaron5）または、tkdryt05@gmail.comにてお願いします。
+  </div>
+</div>
+
 <div id="event-list">
-  
   <% @events.each do |event| %>
     <% if event.date >= Date.today %>
       <div class="m-2 rounded border border-2">
-        <table class="table m-0">
+        <table class="table m-0 bg-light">
           <tr>
             <th colspan="2" class="py-0"><%= event.date %></th>
           </tr>
           <tr>
-            <th class="py-0 col-3">title</th>
+            <th class="py-0 col-4">title</th>
             <td class="py-0"><%= event.title %></td>
           </tr>
           <tr>
-            <th class="py-0 col-3">place</th>
+            <th class="py-0 col-4">place</th>
             <td class="py-0"><%= event.place %></td>
           </tr>
           <tr>
-            <th class="py-0 col-3">勤務予定時間</th>
+            <th class="py-0 col-4">勤務予定時間</th>
             <td class="py-0"><%= event.working_time %></td>
           </tr>
           <tr>
-            <th class="py-0 col-3">募集人数</th>
+            <th class="py-0 col-4">募集人数</th>
             <td class="py-0"><%= event.member_num %>名</td>
           </tr>
           <tr>
-            <th class="py-0 col-3">現在人数</th>
+            <th class="py-0 col-4">現在人数</th>
+            <td class="py-0"><%= event.current_num %>名/<%= event.member_num %>名</td>
+          </tr>
+        </table>
+      </div>
+    <% elsif event.date < Date.today && is_superuser? %>
+      <div class="m-2 rounded border border-2">
+        <table class="table m-0 bg-secondary">
+          <tr>
+            <th colspan="2" class="py-0"><%= event.date %></th>
+          </tr>
+          <tr>
+            <th class="py-0 col-4">title</th>
+            <td class="py-0"><%= event.title %></td>
+          </tr>
+          <tr>
+            <th class="py-0 col-4">place</th>
+            <td class="py-0"><%= event.place %></td>
+          </tr>
+          <tr>
+            <th class="py-0 col-4">勤務予定時間</th>
+            <td class="py-0"><%= event.working_time %></td>
+          </tr>
+          <tr>
+            <th class="py-0 col-4">募集人数</th>
+            <td class="py-0"><%= event.member_num %>名</td>
+          </tr>
+          <tr>
+            <th class="py-0 col-4">現在人数</th>
             <td class="py-0"><%= event.current_num %>名/<%= event.member_num %>名</td>
           </tr>
         </table>
